# me

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/: branch-template.md  commit-template.txt  merge-template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
electron/: codex-env.js  codex-runner.js  main.js  preload.js
rust-backend/: Cargo.toml
rust-backend/src/: lib.rs  main.rs
scripts/: launch-codex-scenario.js  launch-me-emulator.js  me-emulator-lib.js
src/: index.html  renderer.js  styles.css
test/: codex-env.test.js  me-emulator-lib.test.js
